[gd_scene load_steps=8 format=3 uid="uid://4neuynylwq7q"]

[ext_resource type="Script" path="res://Gameplay/gameplay.gd" id="1_gx5na"]
[ext_resource type="PackedScene" uid="uid://dwwwc2xgdm8ts" path="res://Menu/pause_menu.tscn" id="2_ctq3r"]
[ext_resource type="PackedScene" uid="uid://dq4u2fdnraeoq" path="res://Gameplay/countdown_timer.tscn" id="2_j8m7y"]
[ext_resource type="PackedScene" uid="uid://bp8vg0hk7jin0" path="res://Gameplay/Text/game_text.tscn" id="4_0lxqa"]
[ext_resource type="PackedScene" uid="uid://ba1yw08wey28c" path="res://Menu/game_over_menu.tscn" id="5_me7rx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktrsl"]
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="LabelSettings" id="LabelSettings_lnph4"]
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Gameplay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gx5na")

[node name="CountdownTimer" parent="." instance=ExtResource("2_j8m7y")]
unique_name_in_owner = true
process_mode = 2

[node name="GameText" parent="." instance=ExtResource("4_0lxqa")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -150.0
offset_right = 150.0

[node name="PauseMenu" parent="." instance=ExtResource("2_ctq3r")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="GameOverMenu" parent="." instance=ExtResource("5_me7rx")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="CountdownUI" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ktrsl")

[node name="CenterContainer" type="CenterContainer" parent="CountdownUI"]
layout_mode = 2

[node name="CountdownLabel" type="Label" parent="CountdownUI/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3
"
label_settings = SubResource("LabelSettings_lnph4")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="tick" from="CountdownTimer" to="." method="_on_countdown_timer_tick"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="text_finished" from="GameText" to="." method="_on_game_text_finished"]
[connection signal="resume_requested" from="PauseMenu" to="." method="_on_pause_menu_resume_requested"]
